code/zz_line_default_method.c.error
zz_line_default_method.c:1655:57: error: incompatible pointer to integer conversion passing 'struct list$1int$ *' to parameter of type 'int' [-Wint-conversion]
 1655 |         __result_obj__0 = list$1int$_bad_default_method(li);
      |                                                         ^~
zz_line_default_method.c:1391:46: note: passing argument to parameter 'n' here
 1391 | static int list$1int$_bad_default_method(int n);
      |                                              ^
zz_line_default_method.c:4548:31: warning: cast to smaller integer type 'int' from 'void *' [-Wvoid-pointer-to-int-cast]
 4548 |     return (int_get_hash_key(((int)value)));
      |                               ^~~~~~~~~~
zz_line_default_method.c:5898:12: warning: comparison between pointer and integer ('int' and 'void *') [-Wpointer-integer-compare]
 5898 |     if(self==((void*)0)) {
      |        ~~~~^ ~~~~~~~~~~
zz_line_default_method.c:5911:12: warning: comparison between pointer and integer ('long' and 'void *') [-Wpointer-integer-compare]
 5911 |     if(self==((void*)0)) {
      |        ~~~~^ ~~~~~~~~~~
3 warnings and 1 error generated.
